--- a/LoginProyectFINAL/src/Home/Bienvenida.form
+++ b/LoginProyectFINAL/src/Home/Bienvenida.form
@@ -63,7 +63,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="246" max="-2" attributes="0"/>
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="223" max="32767" attributes="0"/>
+              <EmptySpace pref="238" max="32767" attributes="0"/>
           </Group>
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="32767" attributes="0"/>
@@ -90,7 +90,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tw Cen MT Condensed Extra Bold" size="48" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Bienvenudos a la tienda."/>
+        <Property name="text" type="java.lang.String" value="Bienvenudos a la fiesta."/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="jButton1">
